--- a/package.json
+++ b/package.json
@@ -9,8 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.16.8",
+    "@types/cors": "^2.8.3",
+    "@types/cron": "^1.2.1",
+    "@types/debug": "0.0.30",
+    "@types/express": "^4.11.1",
     "@types/mongodb": "^3.0.5",
-    "avergnaud-ohlc": "1.0.4",
+    "avergnaud-ohlc": "1.0.11",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "cron": "^1.3.0",
+    "debug": "^3.1.0",
+    "express": "^4.16.2",
     "https": "^1.0.0",
     "mongodb": "^3.0.2"
   }
